# TidyMut

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  python-publish.yml  setup.py
.tidymut/: config.json
doc/: requirements.in  requirements.txt
doc/changelog/: CHANGELOG_0.1.0-beta.md  CHANGELOG_0.1.1.md  CHANGELOG_0.2.0.md  CHANGELOG_0.3.0.md  CHANGELOG_0.4.0.md  CHANGELOG_0.4.1.md  CHANGELOG_0.8.0.md
doc/source/: conf.py  index.rst  modules.rst  tidymut.cleaners.base_config.rst  tidymut.cleaners.basic_cleaners.rst  tidymut.cleaners.human_domainome_cleaner.rst  tidymut.cleaners.human_domainome_custom_cleaners.rst  tidymut.cleaners.k50_cleaner.rst  tidymut.cleaners.protein_gym_custom_cleaners.rst  tidymut.core.alphabet.rst  tidymut.core.codon.rst  tidymut.core.pipeline.rst  tidymut.core.rst  tidymut.core.types.rst
test/: test_dataset.py  test_pipeline.py
tests/: test_mutation.py  test_pipeline.py  test_sequence.py
tidymut/: __init__.py
tidymut/cleaners/: ACE2_cleaner.py  CTXM_cleaners.py  ConFit_cleaner.py  ConFit_custom_cleaners.py  RBD_antibody_cleaner.py  TrpB_cleaner.py  __init__.py  aav_capsid_cleaner.py  antitoxin_cleaner.py  antitoxin_pard3_cleaner.py  antitoxin_pard3_custom_cleaners.py  archstabms_1e10_cleaner.py  archstabms_1e10_custom_cleaners.py  base_config.py  basic_cleaners.py  cdna_proteolysis_cleaner.py  cdna_proteolysis_custom_cleaners.py  ctxm_cleaner.py  ddg_dtm_cleaners.py  gb1_cleaner.py  gfp_cleaner.py  grb2_cleaner.py  hMb_cleaner.py  hMb_custom_cleaners.py  human_domainome_cleaner.py  human_domainome_custom_cleaners.py  human_domainome_sup2_cleaner.py  human_domainome_sup4_cleaner.py  human_myoglobin_cleaner.py  (+11 more)
tools/: changelog.py  generate_changelog.sh  release.sh
(+22 files in other folders)
